k8s-production/observability-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: countly-observability
  labels:
    name: countly-observability
    app: countly-observability
